<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Register2Activity"
    android:background="#FFFFF0">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/spoqahansans_bold"
                android:paddingLeft="15dp"
                android:text="미디어"
                android:textColor="@color/black"
                android:textSize="30dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/searchbtn"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:contentDescription="searchbtn"
                android:src="@drawable/searchbtn"
                android:layout_marginRight="30dp"/>
        </LinearLayout>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="25">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true" />
    </LinearLayout>

    <View
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="3dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#E0E0E0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="10dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">
            <ImageView android:id="@+id/homebtn"
                android:src="@drawable/homebtn"
                android:contentDescription="homebtn"
                android:layout_width="30dp"
                android:layout_height="30dp" />
            <TextView
                android:textSize="10dp"
                android:textColor="#A0A0A0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_ek3_string"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView android:id="@+id/commubtn"
                android:src="@drawable/commubtn"
                android:contentDescription="commubtn"
                android:layout_width="30dp"
                android:layout_height="30dp" />
            <TextView
                android:textSize="10dp"
                android:textColor="#A0A0A0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/commu_string"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView android:id="@+id/camerabtn"
                android:src="@drawable/camerabtn"
                android:contentDescription="camerabtn"
                android:layout_width="30dp"
                android:layout_height="30dp" />
            <TextView
                android:textSize="10dp"
                android:textColor="#A0A0A0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camera_string" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView android:id="@+id/mediabtn"
                android:src="@drawable/a_mediabtn"
                android:contentDescription="a_mediabtn"
                android:layout_width="30dp"
                android:layout_height="30dp" />
            <TextView
                android:textSize="10dp"
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/media_string" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView android:id="@+id/mypagebtn"
                android:src="@drawable/mybtn"
                android:contentDescription="mybtn"
                android:layout_width="30dp"
                android:layout_height="30dp" />
            <TextView
                android:textSize="10dp"
                android:textColor="#A0A0A0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="마이페이지" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>