<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CommunityActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.3">
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView android:id="@+id/titlem"
                android:src="@drawable/titlem"
                android:contentDescription="titlem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                />
            <ImageView
                android:id="@+id/titlecom"
                android:src="@drawable/titlecom"
                android:contentDescription="titlecom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <ImageView android:id="@+id/searchbtn"
                android:src="@drawable/searchbtn"
                android:contentDescription="searchbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#BBBCB6" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="커뮤니티 글 목록"
                android:textStyle="bold"
                android:fontFamily="@font/maruburi"
                android:textColor="@color/black"

                android:textSize="20dp"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/postlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="18"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#BBBCB6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">
            <ImageView android:id="@+id/homebtn"
                android:src="@drawable/homebtn"
                android:contentDescription="homebtn"
                android:layout_width="35dp"
                android:layout_height="35dp" />
            <TextView
                android:textSize="11dp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/maruburi"
                android:text="@string/home_ek3_string"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView android:id="@+id/commubtn"
                android:src="@drawable/commubtn"
                android:contentDescription="commubtn"
                android:layout_width="35dp"
                android:layout_height="35dp" />
            <TextView
                android:textSize="11dp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/maruburi"
                android:text="@string/commu_string"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView android:id="@+id/camerabtn"
                android:src="@drawable/camerabtn"
                android:contentDescription="camerabtn"
                android:layout_width="35dp"
                android:layout_height="35dp" />
            <TextView
                android:textSize="11dp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/maruburi"
                android:text="@string/camera_string"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView android:id="@+id/mediabtn"
                android:src="@drawable/mediabtn"
                android:contentDescription="mediabtn"
                android:layout_width="35dp"
                android:layout_height="35dp" />
            <TextView
                android:textSize="11dp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/maruburi"
                android:text="@string/media_string"
                />
            />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView android:id="@+id/mypagebtn"
                android:src="@drawable/mybtn"
                android:contentDescription="mybtn"
                android:layout_width="35dp"
                android:layout_height="35dp" />
            <TextView
                android:textSize="11dp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/maruburi"
                android:text="개인설정" />
        </LinearLayout>

    </LinearLayout>









</LinearLayout>