<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/frame"
    android:background="#FFFFF0"
    tools:context=".Register2Activity">

    <!-- 상단 영역 (진한 노랑: #EFEFE2) -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="0.43"
        android:background="#EFEFE2"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.9" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.3"
                android:gravity="center">

                <ImageView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="titlexl"
                    android:paddingTop="15dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/titlex" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:id="@+id/searchbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:contentDescription="searchbtn"
                    android:src="@drawable/searchbtn" />
            </LinearLayout>
        </LinearLayout>

        <!-- "님과 어울리는 술이에요" 텍스트 포함 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginTop="18dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/spoqahansans_bold"
                android:text="안녕하세요!"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/spoqahansans_bold"
                    android:text="None"
                    android:textColor="#FF6F61"
                    android:textSize="18dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/spoqahansans_bold"
                    android:text="님과 어울리는 술이에요"
                    android:textColor="@color/black"
                    android:textSize="18dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <!-- 하단 영역 (연한 아이보리: #FFFFF0) -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="#FFFFF0"
        android:padding="20dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="※ 고객님의 취향 정보를 바탕으로 추천합니다!"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:fontFamily="@font/spoqahansans_bold" />
    </LinearLayout>

    <!-- 하단 네비게이션 바 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:background="#FFFFF0">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/a_homebtn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/a_homebtn"
                android:contentDescription="a_homebtn" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10dp"
                android:textColor="#000000"
                android:text="@string/home_ek3_string" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView android:id="@+id/commubtn"
                android:src="@drawable/commubtn"
                android:contentDescription="commubtn"
                android:layout_width="30dp"
                android:layout_height="30dp" />
            <TextView
                android:textSize="10dp"
                android:textColor="#A0A0A0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/commu_string"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView android:id="@+id/camerabtn"
                android:src="@drawable/camerabtn"
                android:contentDescription="camerabtn"
                android:layout_width="30dp"
                android:layout_height="30dp" />
            <TextView
                android:textSize="10dp"
                android:textColor="#A0A0A0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camera_string" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView android:id="@+id/mediabtn"
                android:src="@drawable/mediabtn"
                android:contentDescription="mediabtn"
                android:layout_width="30dp"
                android:layout_height="30dp" />
            <TextView
                android:textSize="10dp"
                android:textColor="#A0A0A0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/media_string" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView android:id="@+id/mypagebtn"
                android:src="@drawable/mybtn"
                android:contentDescription="mybtn"
                android:layout_width="30dp"
                android:layout_height="30dp" />
            <TextView
                android:textSize="10dp"
                android:textColor="#A0A0A0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="마이페이지" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>